<?xml version="1.0" encoding="utf-8"?>
<PreferenceGroup camera:title="@string/pref_camera_settings_category"
  xmlns:camera="http://schemas.android.com/apk/res/com.android.camera">
    <IconListPreference camera:title="@string/pref_camera_panoramamode_title" camera:key="pref_camera_panoramamode_key" camera:defaultValue="@string/pref_camera_setting_switch_default" camera:entryValues="@array/pref_camera_setting_switch_entryvalues" camera:singleIcon="@drawable/v6_ic_indicator_panorama" />
    <IconListPreference camera:title="@string/pref_camera_hand_night_title" camera:key="pref_camera_hand_night_key" camera:defaultValue="@string/pref_camera_setting_switch_default" camera:entryValues="@array/pref_camera_setting_switch_entryvalues" camera:singleIcon="@drawable/v6_ic_indicator_hand_night" />
    <IconListPreference camera:title="@string/pref_burst_shoot_title" camera:key="pref_camera_burst_shooting_key" camera:defaultValue="@string/pref_camera_setting_switch_default" camera:entryValues="@array/pref_camera_setting_switch_entryvalues" camera:singleIcon="@drawable/v6_ic_indicator_burst_shoot" />
    <IconListPreference camera:title="@string/pref_camera_audio_capture_title" camera:key="pref_audio_capture" camera:defaultValue="@string/pref_camera_setting_switch_default" camera:entryValues="@array/pref_camera_setting_switch_entryvalues" camera:singleIcon="@drawable/v6_ic_indicator_audio_capture" />
    <IconListPreference camera:title="@string/pref_camera_delay_capture_title" camera:key="pref_delay_capture_mode" camera:defaultValue="@string/pref_camera_setting_switch_default" camera:entryValues="@array/pref_camera_setting_switch_entryvalues" camera:hasPopup="true" camera:singleIcon="@drawable/v6_ic_indicator_delaycapture" />
    <IconListPreference camera:title="@string/pref_camera_delay_capture_title" camera:key="pref_delay_capture_key" camera:defaultValue="@string/pref_camera_delay_capture_default" camera:entryValues="@array/pref_camera_delay_capture_entryvalues" camera:entries="@array/pref_camera_delay_capture_entries" camera:singleIcon="@drawable/v6_ic_indicator_delaycapture" />
    <IconListPreference camera:title="@string/pref_camera_coloreffect_title" camera:key="pref_camera_shader_coloreffect_key" camera:defaultValue="@string/pref_camera_shader_coloreffect_default" camera:hasPopup="true" camera:singleIcon="@drawable/v6_ic_indicator_coloreffect" />
    <IconListPreference camera:title="@string/pref_camera_gradienter_title" camera:key="pref_camera_gradienter_key" camera:defaultValue="@string/pref_camera_setting_switch_default" camera:entryValues="@array/pref_camera_setting_switch_entryvalues" camera:singleIcon="@drawable/v6_ic_indicator_gradienter" />
    <IconListPreference camera:title="@string/pref_camera_tilt_shift_title" camera:key="pref_camera_tilt_shift_key" camera:defaultValue="@string/pref_camera_setting_switch_default" camera:entryValues="@array/pref_camera_setting_switch_entryvalues" camera:singleIcon="@drawable/v6_ic_indicator_tilt_shift" />
    <IconListPreference camera:title="@string/pref_camera_fisheye_title" camera:key="pref_camera_fisheye_key" camera:defaultValue="@string/pref_camera_setting_switch_default" camera:entryValues="@array/pref_camera_setting_switch_entryvalues" camera:singleIcon="@drawable/v6_ic_indicator_fisheye" />
    <IconListPreference camera:title="@string/pref_face_beauty_title" camera:key="pref_camera_face_beauty_key" camera:defaultValue="@string/pref_face_beauty_default" camera:entryValues="@array/pref_face_beauty_entryvalues" camera:entries="@array/pref_face_beauty_entries" camera:singleIcon="@drawable/v6_ic_indicator_facebeauty" />
    <IconListPreference camera:title="@string/pref_face_beauty_title" camera:key="pref_camera_face_beauty_mode_key" camera:defaultValue="@string/pref_camera_setting_switch_default" camera:entryValues="@array/pref_camera_setting_switch_entryvalues" camera:hasPopup="true" camera:singleIcon="@drawable/v6_ic_indicator_facebeauty" />
    <IconListPreference camera:title="@string/pref_camera_ubifocus_title" camera:key="pref_camera_ubifocus_key" camera:defaultValue="@string/pref_camera_setting_switch_default" camera:entryValues="@array/pref_camera_setting_switch_entryvalues" camera:singleIcon="@drawable/v6_ic_indicator_ubifocus" />
    <IconListPreference camera:title="@string/pref_camera_manual_mode_title" camera:key="pref_camera_manual_mode_key" camera:defaultValue="@string/pref_camera_setting_switch_default" camera:entryValues="@array/pref_camera_setting_switch_entryvalues" camera:hasPopup="true" camera:singleIcon="@drawable/v6_ic_indicator_manual" />
    <IconListPreference camera:title="@string/pref_manual_exposure_title" camera:key="pref_qc_camera_exposuretime_key" camera:defaultValue="@string/pref_camera_exposuretime_default" camera:entryValues="@array/pref_camera_exposuretime_entryvalues" camera:entries="@array/pref_camera_exposuretime_entries" camera:hasPopup="true" />
    <IconListPreference camera:title="@string/pref_camera_whitebalance_title" camera:key="pref_camera_whitebalance_key" camera:defaultValue="@string/pref_camera_whitebalance_default" camera:entryValues="@array/pref_camera_whitebalance_entryvalues" camera:entries="@array/pref_camera_whitebalance_entries" camera:hasPopup="true" camera:icons="@array/camera_whitebalance_icons" />
    <IconListPreference camera:title="@string/pref_camera_iso_title" camera:key="pref_qc_camera_iso_key" camera:defaultValue="@string/pref_camera_iso_default" camera:entryValues="@array/pref_camera_iso_entryvalues" camera:entries="@array/pref_camera_iso_entries" camera:hasPopup="true" />
    <IconListPreference camera:title="@string/pref_qc_focus_position_title" camera:key="pref_focus_position_key" camera:defaultValue="@string/pref_qc_focus_position_value_default" camera:hasPopup="true" />
    <IconListPreference camera:title="@string/pref_camera_scenemode_title" camera:key="pref_camera_scenemode_key" camera:defaultValue="@string/pref_camera_scenemode_default" camera:entryValues="@array/pref_camera_scenemode_entryvalues" camera:entries="@array/pref_camera_scenemode_entries" camera:icons="@array/camera_scenemode_largeicons" />
    <IconListPreference camera:title="@string/pref_camera_scenemode_title" camera:key="pref_camera_scenemode_setting_key" camera:defaultValue="@string/pref_camera_setting_switch_default" camera:entryValues="@array/pref_camera_setting_switch_entryvalues" camera:hasPopup="true" camera:singleIcon="@drawable/v6_ic_indicator_scenemode" />
    <IconListPreference camera:title="@string/pref_camera_settings_title" camera:key="pref_settings" camera:singleIcon="@drawable/v6_ic_indicator_setting" />
</PreferenceGroup>