<?xml version="1.0" encoding="utf-8"?>
<com.android.camera.ui.V6CameraTopControlPanel android:id="@id/v6_camera_top_control_panel" android:paddingLeft="@dimen/v6_top_control_padding" android:paddingRight="@dimen/v6_top_control_padding" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_centerVertical="true"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.android.camera.ui.SkinBeautyButton android:id="@id/skin_beatify_button" android:visibility="gone" android:src="@drawable/ic_camera_skin_beatify_close" android:layout_alignParentLeft="true" android:layout_centerVertical="true" android:contentDescription="@string/accessibility_skin_beautify_button" style="@style/TopPanelRotateImageViewStyle" />
    <com.android.camera.ui.V6FlashButton android:id="@id/v6_flash_mode_button" android:src="@drawable/v6_ic_flash_button_auto" android:layout_alignParentLeft="true" android:layout_centerVertical="true" android:contentDescription="@string/accessibility_flash_mode_button" style="@style/TopPanelRotateImageViewStyle" />
    <com.android.camera.ui.HdrButton android:gravity="center" android:id="@id/v6_hdr" android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="@dimen/v6_top_control_height" android:layout_centerInParent="true" android:contentDescription="@string/accessibility_hdr" style="@style/TextOnlySettingIndicatorText" />
    <com.android.camera.ui.CountDownButton android:gravity="center" android:id="@id/v6_countdown" android:padding="10.0dip" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="@dimen/v6_top_control_height" android:layout_centerInParent="true" android:contentDescription="@string/accessibility_hdr" style="@style/TextOnlySettingIndicatorText" />
    <com.android.camera.ui.PeakButton android:gravity="center" android:id="@id/v6_peak" android:padding="10.0dip" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="@dimen/v6_top_control_height" android:layout_centerInParent="true" android:contentDescription="@string/accessibility_hdr" style="@style/TextOnlySettingIndicatorText" />
    <com.android.camera.ui.V6CameraPicker android:id="@id/v6_camera_picker" android:src="@drawable/v6_camera_picker_bg" android:layout_alignParentRight="true" android:layout_centerVertical="true" android:contentDescription="@string/accessibility_camera_picker" style="@style/TopPanelRotateImageViewStyle" />
</com.android.camera.ui.V6CameraTopControlPanel>