<?xml version="1.0" encoding="utf-8"?>
<com.android.camera.ui.V6VideoBottomControlPanel android:id="@id/v6_video_bottom_control_panel" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_centerVertical="true"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.android.camera.ui.V6ThumbnailButton android:id="@id/v6_thumbnail_button" android:padding="10.0dip" android:visibility="gone" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="@dimen/v6_bottom_control_padding" android:layout_alignParentRight="true" android:layout_centerVertical="true">
        <com.android.camera.ui.RotateImageView android:id="@id/v6_thumbnail_image" android:clickable="false" android:layout_width="1.0dip" android:layout_height="1.0dip" android:src="@drawable/v6_ic_thumbnail_background" android:scaleType="center" android:layout_centerInParent="true" android:contentDescription="@string/accessibility_review_thumbnail" />
        <com.android.camera.ui.RotateImageView android:background="@drawable/v6_ic_thumbnail_forground" android:clickable="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:scaleType="center" android:layout_centerInParent="true" android:contentDescription="@string/accessibility_review_thumbnail" />
    </com.android.camera.ui.V6ThumbnailButton>
    <com.android.camera.ui.V6VideoCaptureButton android:id="@id/v6_video_capture_button" android:padding="10.0dip" android:visibility="gone" android:clickable="true" android:layout_marginRight="@dimen/v6_bottom_control_padding" android:src="@drawable/ic_capture_video_picture" android:layout_alignParentRight="true" android:soundEffectsEnabled="false" android:contentDescription="@string/accessibility_video_capture_button" style="@style/RotateImageViewStyle" />
    <com.android.camera.ui.V6ShutterButton android:id="@id/v6_shutter_button" android:layout_width="@dimen/v6_shutter_button_width" android:layout_height="@dimen/v6_shutter_button_width" android:layout_centerInParent="true">
        <com.android.camera.ui.V6ShutterButtonAudioSound android:id="@id/v6_shutter_button_audio_sound" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_centerInParent="true" android:contentDescription="@string/accessibility_shutter_button" />
        <com.android.camera.ui.V6ShutterButtonInternal android:id="@id/v6_shutter_button_internal" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/v6_video_shutter_button_start_bg" android:scaleType="center" android:layout_centerInParent="true" android:contentDescription="@string/accessibility_shutter_button" />
        <RelativeLayout android:id="@id/v6_progress_capture" android:background="@drawable/ic_shutter_progress_bg" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerInParent="true">
            <ProgressBar android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerInParent="true" style="?android:attr/progressBarStyleLarge" />
        </RelativeLayout>
    </com.android.camera.ui.V6ShutterButton>
    <com.android.camera.ui.V6ModulePicker android:id="@id/v6_module_picker" android:padding="10.0dip" android:clickable="true" android:layout_marginLeft="@dimen/v6_bottom_control_padding" android:src="@drawable/v6_video_module_picker_bg" android:layout_alignParentLeft="true" android:contentDescription="@string/accessibility_module_picker" style="@style/RotateImageViewStyle" />
    <com.android.camera.ui.V6PauseRecordingButton android:id="@id/v6_video_pause_button" android:padding="10.0dip" android:visibility="gone" android:clickable="true" android:layout_marginLeft="@dimen/v6_bottom_control_padding" android:src="@drawable/ic_recording_pause" android:layout_alignParentLeft="true" android:soundEffectsEnabled="false" android:contentDescription="@string/accessibility_video_pause_button" style="@style/RotateImageViewStyle" />
</com.android.camera.ui.V6VideoBottomControlPanel>